Faster class processing